// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LinkLikeButton renders with dataTestId 1`] = `
<Button
  className="__LinkLikeButton__ blue"
  data-test-id="example-button"
  data-testid="example-button"
  onClick={[MockFunction]}
  type="text"
>
  example
</Button>
`;

exports[`LinkLikeButton renders with required props 1`] = `
<Button
  className="__LinkLikeButton__ blue"
  onClick={[MockFunction]}
  type="text"
>
  example
</Button>
`;
